# ConvexHullGrahamScan

./: CMakeLists.txt
include/: ConvexHullAlgorithm.h  GrahamScanAlgorithm.h  Point.h
src/: GrahamScanAlgorithm.cpp  Point.cpp  main.cpp
test/: CMakeLists.txt  test.cpp
